--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav > * {
 
 nav #brand {
   padding-right: var(--page-margin);
-  background-image: url(../tipsandtricks/images/logo.png);
+  background-image: url(../UX_UI_HW_21/tipsandtricks/images/logo.png);
   background-size: contain;
   background-repeat: no-repeat;
   transform: scale(1.5) translate( 1rem, 2.5rem)
@@ -374,3 +374,101 @@ text-align: center;
 
 }
 
+#emailnews{
+  background: #efe1d48f;
+  display: flex;
+  justify-content: center;
+
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #533B24;
+  padding-top: 3rem;
+font-family: Arial, Helvetica, sans-serif;
+}
+
+h5{
+  ont-size: 14px ;
+  font-weight: bold;
+  color: #533B24;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-right: 10rem;
+  
+}
+
+.form-outline{
+  padding-top: 2rem;
+}
+
+.form-check-label{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  padding-bottom: 2rem;
+}
+
+.form-control{
+  border-radius: 0px;
+}
+
+.btn {
+  background: #533B24;
+  max-height: 40px;
+border: #533B24;
+border-radius: 0px;
+transform: translate(1.5rem, 2rem);
+font-family: Arial, Helvetica, sans-serif;
+font-size: 14px;
+}
+
+footer{
+  display: flex;
+  background: #EFE1D4;
+  justify-content: center;
+  justify-content: space-between;
+  padding-left: 7.5rem;
+  padding-right: 7.5rem;
+  padding-top: 3rem;
+  padding-bottom: 4rem;
+}
+
+h6{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: #533B24;
+}
+#footerline{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+li a{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  padding-top: 1rem;
+}
+
+.socials h6{
+  padding-left: 7.5rem;
+  background: #EFE1D4;
+  transform: translate(0rem, -6rem);
+  max-width: fit-content;
+}
+
+#socialsimg{
+  padding-left: 9rem;
+  background: #EFE1D4;
+  transform: translate(0rem, -5rem);
+  max-width: fit-content;
+}
+#credit{
+  display: flex;
+  background: #EFE1D4;
+  padding-left: 7.5rem;
+  padding-right: 7.5rem;
+  padding-bottom: 2rem;
+  transform: translate(0rem, -4rem);
+ 
+}
