--- a/style.css
+++ b/style.css
@@ -421,6 +421,10 @@ transform: translate(1.5rem, 2rem);
 font-family: Arial, Helvetica, sans-serif;
 font-size: 14px;
 }
+.btn :hover{
+  background: #EFE1D4;
+  color: #533B24;
+}
 
 footer{
   display: flex;
@@ -447,28 +451,74 @@ h6{
 li a{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  padding-top: 1rem;
+  padding-top: 2rem;
 }
 
 .socials h6{
   padding-left: 7.5rem;
   background: #EFE1D4;
-  transform: translate(0rem, -6rem);
+  transform: translate(0rem, -10rem);
+  max-width: fit-content;
+  display: inline-block;
+}
+
+#facebook{
+  padding-left: 3rem;
+  background: #EFE1D4;
+  transform: translate(-8rem, -6rem);
   max-width: fit-content;
 }
 
-#socialsimg{
-  padding-left: 9rem;
+#instagram{
+  padding-left: 3rem;
   background: #EFE1D4;
-  transform: translate(0rem, -5rem);
+  transform: translate(-8rem, -6rem);
+  max-width: fit-content;
+}
+
+#twitter{
+  padding-left: 3rem;
+  background: #EFE1D4;
+  transform: translate(-8rem, -6rem);
+  max-width: fit-content;
+}
+
+#tiktok{
+  padding-left: 3rem;
+  background: #EFE1D4;
+  transform: translate(-8rem, -6rem);
+  max-width: fit-content;
+}
+#pin{
+  padding-left: 3rem;
+  background: #EFE1D4;
+  transform: translate(-8rem, -6rem);
+  max-width: fit-content;
+}
+#youtube{
+  padding-left: 3rem;
+  background: #EFE1D4;
+  transform: translate(-8rem, -6rem);
   max-width: fit-content;
 }
 #credit{
-  display: flex;
+  border-style: solid;
+  border-color: #F9F1EA;
   background: #EFE1D4;
   padding-left: 7.5rem;
   padding-right: 7.5rem;
-  padding-bottom: 2rem;
-  transform: translate(0rem, -4rem);
+  padding-bottom: 1rem;
+  padding-top: 2rem;
+  transform: translate(0rem, -2.5rem);
  
+}
+
+#creditimg {
+  display: block;
+  background: #EFE1D4;
+margin-left: auto;
+margin-right: auto;
+  padding-top: .5rem;
+  
+  transform: scale(60%);
 }
