tip&tricks cards

--- a/relatedhobbies/index.css
+++ b/relatedhobbies/index.css
@@ -258,7 +258,8 @@
     justify-content: center;
     color: #6e798c7a;
     font-size: 25px;
-    padding-top: 1rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
   
   .content{
