--- a/tipsandtricks/css/index.css
+++ b/tipsandtricks/css/index.css
@@ -305,7 +305,7 @@ html, body, div, span, applet, object, iframe, h1, h2, fo h3, h4, h5, h6, p, blo
 }
 
 .card .body {
-  width: 60%;
+  width: 90%;
   height: 250px;
  
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.304);
@@ -315,9 +315,9 @@ html, body, div, span, applet, object, iframe, h1, h2, fo h3, h4, h5, h6, p, blo
 }
 
 .card .body .right {
-  width: 450px;
+  width: 600px;
   
-  padding-right: 10 rem;
+  
   transform: translate(-5rem, 0rem);
 }
 
@@ -338,7 +338,7 @@ p{
 .main-post-title{
   font-family: 'Times New Roman', Times, serif;
   font-weight: bold;
-  padding-top: 2rem;
+  padding-top: 3rem;
   font-size: 20px;
   padding-bottom: 1rem;
   color: #1b1b1b;
@@ -346,10 +346,53 @@ p{
 
 .hpppi-author{
   
-  padding-left: 1rem;
+  
   display: flex;
 
 }
+
+@media (max-width:1665px){
+  .more {
+      
+      padding-left: 2rem;
+  }
+
+}
+
+
+
+@media (max-width:1000px){
+  .cardimg {
+      display:none;
+  }
+
+}
+
+
+@media (max-width:1000px){
+  .left {
+      display:none;
+  }
+
+}
+
+@media (max-width:1000px){
+  .right {
+      padding-left: 7.5rem;
+  }
+
+}
+
+@media (max-width:910px){
+  .card .body {
+      height:fit-content;
+      
+  }
+
+}
+
+
+
 
 .author{
   padding-top: .5rem;
@@ -358,19 +401,22 @@ p{
   font-weight: bold;
   font-size: 14px;
   color: #533B24;
+  padding-bottom: 2rem;
 }
 
 .more{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   padding-top: .6rem;
-  padding-left: 12rem;
+  display: flex;
+  padding-left: 10rem;
+  justify-content: right;
 }
 .cardimg{
   transform: scale(.73) translate( -6.5rem, -3.9rem);
 
-  width: 100%;
-  height:auto
+  width: 87%;
+  height:fit-content
 
 }
 
