--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ padding-right: 1rem;
 
 
 
-html, body, div, span, applet, object, iframe, h1, h2, fo h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, tr {
+html, body, div, span, applet, object, iframe, h1, h2, fo h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, tt, var, b, u, i, center, dl, dt, dd, ul, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, tr {
   margin: 0;
   padding: 0;
   border: none;
@@ -261,13 +261,9 @@ html, body, div, span, applet, object, iframe, h1, h2, fo h3, h4, h5, h6, p, blo
 
 
 
-.breadcrumb{
-  height: fit-content;
-  background: white;
-  margin-bottom: 0rem !important;
-  display: flex;
-  padding-left: 7.5rem !important;
-}
+
+
+
 
 .overwrap {
   background: #fff;
