--- a/style.css
+++ b/style.css
@@ -130,6 +130,16 @@ nav .links > *:hover {
   
 }
 
+.breadcrumb{
+  height: fit-content;
+  background: white ;
+ 
+  margin-bottom: 0rem !important;
+  display: flex;
+  padding-left: 7.5rem !important;
+}
+
+
 #article-header-stub {
   display: none;
   height: 400px;
